--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "nyc --reporter=html mocha ./**/*.spec.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -15,5 +16,13 @@
     "mongoose": "^5.5.5",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "mockery": "^2.1.0",
+    "nyc": "^14.1.0",
+    "rewire": "^4.0.1",
+    "sinon": "^7.3.2"
   }
 }
