--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nyc --reporter=html mocha ./**/*.spec.js"
+    "test": "nyc --reporter=html mocha ./**/*.spec.js",
+    "integration": "mocha ./tests/integration/**/*.test.js",
+    "pr": "node ./node_modules/eslint/bin/eslint.js --config ./eslintrc.js . --fix"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -18,10 +20,19 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "mocha": "^6.1.4",
     "mockery": "^2.1.0",
     "nyc": "^14.1.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "rewire": "^4.0.1",
     "sinon": "^7.3.2"
   }
