--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nyc --reporter=html mocha ./**/*.spec.js",
+    "test": "nyc --reporter=html --all mocha './{,!(node_modules)/**}/*.spec.js'",
     "integration": "mocha ./tests/integration/**/*.test.js",
     "pr": "node ./node_modules/eslint/bin/eslint.js --config ./eslintrc.js . --fix"
   },
