--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
     "mocha": "^10.0.0",
     "mochawesome": "^3.1.2",
     "mockery": "^2.1.0",
